# TDD-project

./: README.md  docker-compose.yml  pyproject.toml
store/core/: config.py  exceptions.py
store/db/: mongo.py
store/models/: base.py
store/schemas/: base.py  product.py
store/tests/: conftest.py
store/tests/schemas/: factories.py  test_product.py
store/tests/usecases/: test_product.py
store/usecases/: product.py
